- plotLearnerPrediction works for clustering and allows greyscale plots (for printing or articles)
- the whole object-oriented structure behind feature filtering was much improved
- fixed a bug in filter methods of the FSelector package that caused an error when variable names
  contained accented letters
- We dropped the data.frame version of some preprocessing operations like mergeFactorLevelsBySize,
  joinClassLevels and removeConstantFeatures for consistency. These now always require tasks as input.
- We support a pretty generic framework for stacking / super-learning now, see makeStackedLearner
- imbalancy correction + smote:
  -- fix a bug in "smote" when only factor features are present
  -- change to oversampling: sample new observations only (with replacement)
  --- extension to smote algorithm (sampling): minority class observations in binary classification
      are either chosen via sampling or alternatively, each minority class observation is used an
      equal number of times

- new learners:
-- classif.bartMachine
-- classif.lqa
-- classif.randomForestSRC
-- classif.sda
-- regr.ctree
-- regr.plsr
-- regr.randomForestSRC
-- cluster.cmeans
-- cluster.DBScan
-- cluster.kmeans
-- cluster.Cobweb
-- cluster.FarthestFirst
-- surv.cvglmnet

- new filters:
-- univariate
-- carscore
-- rf.importance, rf.min.depth
-- anova.test, kruskal.test

- new functions
-- makeMulticlassWrapper
-- makeStackedLearner, getStackedBaseLearnerPredictions
-- joinClassLevels
-- summarizeColumns, summarizeLevels
-- capLargeValues, mergeFactorLevelsBySize

mlr_2.1:
- mlr now supports multi-criteria tuning
- mlr now supports cluster analysis (experimental)
- improve makeWeightedClassesWrapper: Hyperparams for class weighting are now supported, too.
- removed fix.factors option from randomForest, but added it in general to makeLearner,
  so it now works for all learners.
  Helps when feature factor levels where dropped in newdata prediction data.frames